--- a/app/views/create.erb
+++ b/app/views/create.erb
@@ -29,6 +29,17 @@
 	<input id = "add_another_question" type = "submit" value="Add choice and make new question">
 	<a href="/finished"><div id ="btn_home"><p>Done?</p></div></a>
 </form>
+<form id = "another_choice" method = "POST" action = '/another_choice'>
+	<h3>Add another choice?</h3> <br>
+
+	<input  type = "submit" value="Yes">
+
+</form>
+<form id = "another_question" method = "POST" action = '/another_question'>
+	<h3>Add another question?</h3> <br>
+	<input  type = "submit" value="Yes">
+</form>
+
 
 
 
